Move multiplex to its own subproject (part 2)